maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:19: error: not found: value random20
      atteint=random20(10)
              ^